--- a/Source/YTD.cfg
+++ b/Source/YTD.cfg
@@ -33,6 +33,8 @@
 -K$00400000
 -E"..\Exe"
 -N"..\Units"
+-LE"S:\Balicky"
+-LN"S:\Balicky"
 -U"lib\lkjson;lib\regexpr;lib\synapse\source\lib;lib\pepak;lib\dpcre67;lib\janXmlParser2"
 -O"lib\lkjson;lib\regexpr;lib\synapse\source\lib;lib\pepak;lib\dpcre67;lib\janXmlParser2"
 -I"lib\lkjson;lib\regexpr;lib\synapse\source\lib;lib\pepak;lib\dpcre67;lib\janXmlParser2"
