--- a/Source/Lib/RtmpDump/Makefile
+++ b/Source/Lib/RtmpDump/Makefile
@@ -3,8 +3,8 @@ VERSION=v2.2d
 CC=$(CROSS_COMPILE)gcc
 LD=$(CROSS_COMPILE)ld
 
-CRYPTO=OPENSSL
-#CRYPTO=POLARSSL
+#CRYPTO=OPENSSL
+CRYPTO=POLARSSL
 #CRYPTO=GNUTLS
 LIB_GNUTLS=-lgnutls -lgcrypt
 LIB_OPENSSL=-lssl -lcrypto
