--- a/Source/Lib/RtmpDump/librtmp/Makefile
+++ b/Source/Lib/RtmpDump/librtmp/Makefile
@@ -6,8 +6,8 @@ CC=$(CROSS_COMPILE)gcc
 LD=$(CROSS_COMPILE)ld
 AR=$(CROSS_COMPILE)ar
 
-CRYPTO=OPENSSL
-#CRYPTO=POLARSSL
+#CRYPTO=OPENSSL
+CRYPTO=POLARSSL
 #CRYPTO=GNUTLS
 DEF_POLARSSL=-DUSE_POLARSSL
 DEF_OPENSSL=-DUSE_OPENSSL
