--- a/source/YTD.cfg
+++ b/source/YTD.cfg
@@ -20,7 +20,7 @@
 -$T-
 -$U-
 -$V+
--$W+
+-$W-
 -$X+
 -$YD
 -$Z1
@@ -39,4 +39,4 @@
 -O"lib\synapse\source\lib;lib\pepak;lib\perlregex;lib\janXmlParser2;lib\rtmpdump;lib\msdl\src;lib\CoolTrayIcon;lib\dxgettext\delphi5;lib\NativeXml"
 -I"lib\synapse\source\lib;lib\pepak;lib\perlregex;lib\janXmlParser2;lib\rtmpdump;lib\msdl\src;lib\CoolTrayIcon;lib\dxgettext\delphi5;lib\NativeXml"
 -R"lib\synapse\source\lib;lib\pepak;lib\perlregex;lib\janXmlParser2;lib\rtmpdump;lib\msdl\src;lib\CoolTrayIcon;lib\dxgettext\delphi5;lib\NativeXml"
--DXXX;
+-DPEPAK;PEPAK_YTD;XXX;
