--- a/source/YTD.cfg
+++ b/source/YTD.cfg
@@ -39,4 +39,4 @@
 -O"lib\synapse\source\lib;lib\pepak;lib\perlregex;lib\janXmlParser2;lib\rtmpdump;lib\msdl\src;lib\CoolTrayIcon;lib\dxgettext\delphi5;lib\NativeXml"
 -I"lib\synapse\source\lib;lib\pepak;lib\perlregex;lib\janXmlParser2;lib\rtmpdump;lib\msdl\src;lib\CoolTrayIcon;lib\dxgettext\delphi5;lib\NativeXml"
 -R"lib\synapse\source\lib;lib\pepak;lib\perlregex;lib\janXmlParser2;lib\rtmpdump;lib\msdl\src;lib\CoolTrayIcon;lib\dxgettext\delphi5;lib\NativeXml"
--DPEPAK;PEPAK_YTD;XXX;
+-DPEPAK;PEPAK_YTD;XXX
