--- a/source/GUI/WinAPI/guiAboutWINAPI.rc
+++ b/source/GUI/WinAPI/guiAboutWINAPI.rc
@@ -5,7 +5,7 @@
 #include <windows.h>
 #include <commctrl.h>
 #include <richedit.h>
-#include "resource.h"
+#include "guiAboutWINAPI.h"
 
 
 
@@ -14,8 +14,9 @@
 // Dialog resources
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-guiAboutWinAPI DIALOG 0, 0, 285, 172
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+guiAboutWINAPI DIALOG 0, 0, 285, 172
+STYLE DS_3DLOOK | DS_CENTER | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_THICKFRAME | WS_SYSMENU | WS_MINIMIZEBOX | WS_MAXIMIZEBOX
+EXSTYLE WS_EX_WINDOWEDGE
 CAPTION "About YouTube Downloader"
 FONT 8, "Ms Shell Dlg"
 {
@@ -26,4 +27,5 @@ FONT 8, "Ms Shell Dlg"
     LTEXT           "0.60", IDC_LABEL_VERSION, 72, 32, 200, 8, SS_LEFT
     LTEXT           "not found", IDC_LABEL_NEWESTVERSION, 72, 44, 200, 8, SS_LEFT | SS_NOTIFY
     LTEXT           "http://www.pepak.net/download/youtube-downloader", IDC_LABEL_HOMEPAGE, 72, 56, 200, 8, SS_LEFT | SS_NOTIFY
+    CONTROL         "", IDC_LIST_PROVIDERS, WC_LISTVIEW, WS_TABSTOP | WS_BORDER | LVS_ALIGNLEFT | LVS_OWNERDATA | LVS_SINGLESEL | LVS_REPORT, 8, 70, 267, 94
 }
