--- a/source/ytd.cfg
+++ b/source/ytd.cfg
@@ -33,8 +33,8 @@
 -K$00400000
 -E"..\Exe"
 -N"Units"
--LE"c:\program files\borland\delphi5\Projects\Bpl"
--LN"c:\program files\borland\delphi5\Projects\Bpl"
+-LE"S:\Balicky"
+-LN"S:\Balicky"
 -U"lib\pepak\delphi5;lib\pepak;lib\synapse\source\lib;lib\perlregex;lib\janXmlParser2;lib\rtmpdump;lib\msdl\src;lib\CoolTrayIcon;lib\dxgettext\delphi5;lib\NativeXml;Units"
 -O"lib\pepak\delphi5;lib\pepak;lib\synapse\source\lib;lib\perlregex;lib\janXmlParser2;lib\rtmpdump;lib\msdl\src;lib\CoolTrayIcon;lib\dxgettext\delphi5;lib\NativeXml;Units"
 -I"lib\pepak\delphi5;lib\pepak;lib\synapse\source\lib;lib\perlregex;lib\janXmlParser2;lib\rtmpdump;lib\msdl\src;lib\CoolTrayIcon;lib\dxgettext\delphi5;lib\NativeXml;Units"
