--- a/source/ytd.cfg
+++ b/source/ytd.cfg
@@ -31,12 +31,12 @@
 -M
 -$M16384,1048576
 -K$00400000
--E"..\Exe"
+-E"..\Bin"
 -N"Units"
--LE"S:\Balicky"
--LN"S:\Balicky"
--U"lib\pepak\delphi5;lib\pepak;lib\synapse\source\lib;lib\perlregex;lib\janXmlParser2;lib\rtmpdump;lib\msdl\src;lib\CoolTrayIcon;lib\dxgettext\delphi5;lib\NativeXml;Units"
--O"lib\pepak\delphi5;lib\pepak;lib\synapse\source\lib;lib\perlregex;lib\janXmlParser2;lib\rtmpdump;lib\msdl\src;lib\CoolTrayIcon;lib\dxgettext\delphi5;lib\NativeXml;Units"
--I"lib\pepak\delphi5;lib\pepak;lib\synapse\source\lib;lib\perlregex;lib\janXmlParser2;lib\rtmpdump;lib\msdl\src;lib\CoolTrayIcon;lib\dxgettext\delphi5;lib\NativeXml;Units"
--R"lib\pepak\delphi5;lib\pepak;lib\synapse\source\lib;lib\perlregex;lib\janXmlParser2;lib\rtmpdump;lib\msdl\src;lib\CoolTrayIcon;lib\dxgettext\delphi5;lib\NativeXml;Units"
--DPEPAK;PEPAK_YTD;XXX
+-LE"c:\program files\borland\delphi5\Projects\Bpl"
+-LN"c:\program files\borland\delphi5\Projects\Bpl"
+-U"lib\pepak\delphi5;lib\pepak;lib\synapse\source\lib;lib\perlregex;lib\rtmpdump;lib\msdl\src;lib\dxgettext\delphi5;lib\NativeXml;lib\lkJSON;Units"
+-O"lib\pepak\delphi5;lib\pepak;lib\synapse\source\lib;lib\perlregex;lib\rtmpdump;lib\msdl\src;lib\dxgettext\delphi5;lib\NativeXml;lib\lkJSON;Units"
+-I"lib\pepak\delphi5;lib\pepak;lib\synapse\source\lib;lib\perlregex;lib\rtmpdump;lib\msdl\src;lib\dxgettext\delphi5;lib\NativeXml;lib\lkJSON;Units"
+-R"lib\pepak\delphi5;lib\pepak;lib\synapse\source\lib;lib\perlregex;lib\rtmpdump;lib\msdl\src;lib\dxgettext\delphi5;lib\NativeXml;lib\lkJSON;Units"
+-DPEPAK;PEPAK_YTD;XXX;
