--- a/source/GUI/WinAPI/guiOptionsWINAPI.rc
+++ b/source/GUI/WinAPI/guiOptionsWINAPI.rc
@@ -14,22 +14,15 @@
 // Dialog resources
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-TFormOptions DIALOG 0, 0, 270, 95
+TFormOptions DIALOG 0, 0, 278, 145
 STYLE DS_3DLOOK | DS_CENTER | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_THICKFRAME | WS_SYSMENU
 EXSTYLE WS_EX_WINDOWEDGE
 CAPTION "Options"
 FONT 8, "Ms Shell Dlg"
 {
-    AUTOCHECKBOX    "&Automatically start downloads", IDC_CHECKBOX_AUTOSTARTDOWNLOADS, 8, 8, 253, 10
-    CONTROL         "&Existing files:", IDC_LABEL_OVERWRITEMODE, WC_STATIC, SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 22, 74, 10
-    COMBOBOX        IDC_COMBO_OVERWRITEMODE, 82, 22, 179, 30, WS_TABSTOP | WS_TABSTOP | CBS_DROPDOWNLIST | CBS_HASSTRINGS
-    CONTROL         "&Download directory:", IDC_LABEL_DOWNLOADDIR, WC_STATIC, SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 38, 74, 10
-    EDITTEXT        IDC_EDIT_DOWNLOADDIR, 82, 38, 168, 14, ES_AUTOHSCROLL
-    PUSHBUTTON      "...", IDC_BUTTON_DOWNLOADDIR, 250, 38, 11, 14
-    CONTROL         "&Converter:", IDC_LABEL_CONVERTER, WC_STATIC, SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 54, 74, 10
-    COMBOBOX        IDC_COMBO_CONVERTER, 82, 54, 179, 30, WS_TABSTOP | WS_TABSTOP | CBS_DROPDOWNLIST | CBS_HASSTRINGS
-    DEFPUSHBUTTON   "&OK", IDC_BUTTON_OK, 157, 74, 50, 14
-    PUSHBUTTON      "&Cancel", IDC_BUTTON_CANCEL, 211, 74, 50, 14
+    CONTROL         "", IDC_PAGE_OPTIONS, WC_TABCONTROL, WS_TABSTOP, 0, 0, 278, 117
+    DEFPUSHBUTTON   "&OK", IDC_BUTTON_OK, 157, 124, 50, 14
+    PUSHBUTTON      "&Cancel", IDC_BUTTON_CANCEL, 211, 124, 50, 14
 }
 
 
@@ -42,5 +35,4 @@ OPTIONS_ACTIONS ACCELERATORS
 {
     VK_RETURN,     ACTION_OK, VIRTKEY, CONTROL
     VK_ESCAPE,     ACTION_CANCEL, VIRTKEY
-    VK_F10,        ACTION_DOWNLOADDIR, VIRTKEY
 }
