--- a/source/GUI/WinAPI/guiOptionsWINAPI_Main.rc
+++ b/source/GUI/WinAPI/guiOptionsWINAPI_Main.rc
@@ -14,14 +14,15 @@
 // Dialog resources
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-TFrameMainOptions DIALOG 0, 0, 270, 93
+TFrameMainOptions DIALOG 0, 0, 270, 103
 STYLE DS_CONTROL | DS_SHELLFONT | WS_CHILDWINDOW | WS_MAXIMIZEBOX
 FONT 8, "Ms Shell Dlg"
 {
     AUTOCHECKBOX    "&Portable mode", IDC_CHECKBOX_PORTABLEMODE, 8, 8, 253, 10
     AUTOCHECKBOX    "&Check for new versions on startup", IDC_CHECKBOX_CHECKNEWVERSION, 8, 18, 253, 10
-    CONTROL         "&Language:", IDC_LABEL_LANGUAGE, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 32, 74, 10
-    EDITTEXT        IDC_EDIT_LANGUAGE, 82, 32, 179, 14, ES_AUTOHSCROLL
-    PUSHBUTTON      "Create shortcut on &desktop", IDC_BUTTON_SHORTCUTONDESKTOP, 8, 57, 253, 14
-    PUSHBUTTON      "Create shortcut in &Start menu", IDC_BUTTON_SHORTCUTINSTARTMENU, 8, 74, 253, 14
+    AUTOCHECKBOX    "&Monitor clipboard for downloadable URLs", IDC_CHECKBOX_MONITORCLIPBOARD, 8, 28, 253, 10
+    CONTROL         "&Language:", IDC_LABEL_LANGUAGE, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 42, 74, 10
+    EDITTEXT        IDC_EDIT_LANGUAGE, 82, 42, 179, 14, ES_AUTOHSCROLL
+    PUSHBUTTON      "Create shortcut on &desktop", IDC_BUTTON_SHORTCUTONDESKTOP, 8, 67, 253, 14
+    PUSHBUTTON      "Create shortcut in &Start menu", IDC_BUTTON_SHORTCUTINSTARTMENU, 8, 84, 253, 14
 }
