--- a/source/GUI/WinAPI/guiMainWINAPI.rc
+++ b/source/GUI/WinAPI/guiMainWINAPI.rc
@@ -33,7 +33,7 @@ MAIN_POPUPMENU MENU
         MENUITEM "Add URLs from file\tCtrl+O", ACTION_ADDFROMFILE
         MENUITEM "Add URLs from HTML file\tCtrl+H", ACTION_ADDFROMHTML
         MENUITEM "Add URLs from HTML page\tCtrl+P", ACTION_ADDFROMWEBPAGE
-        MENUITEM "Add URLs from Clipboard\tCTRL+V", ACTION_ADDFROMCLIPBOARD2
+        MENUITEM "Add URLs from Clipboard\tCtrl+V", ACTION_ADDFROMCLIPBOARD2
         MENUITEM SEPARATOR
         MENUITEM "Copy URLs to Clipboard\tCtrl+C", ACTION_COPYTOCLIPBOARD2
         MENUITEM "Save URL list\tCtrl+S", ACTION_SAVETOFILE
