--- a/source/GUI/WinAPI/guiMainWINAPI.rc
+++ b/source/GUI/WinAPI/guiMainWINAPI.rc
@@ -41,6 +41,8 @@ MAIN_POPUPMENU MENU
         MENUITEM "Start/Pause/Resume\tSpace", ACTION_START
         MENUITEM "Stop\tEsc", ACTION_STOP
         MENUITEM "Convert\tCtrl+N", ACTION_CONVERT
+        MENUITEM "Play\tEnter", ACTION_PLAY
+        MENUITEM "Explore folder\tCtrl+E", ACTION_EXPLOREFOLDER
         MENUITEM SEPARATOR
         MENUITEM "Delete URL\tDel", ACTION_DELETEURL
         MENUITEM "Select all\tCtrl+A", ACTION_SELECTALL
@@ -48,7 +50,7 @@ MAIN_POPUPMENU MENU
         MENUITEM "Refresh\tF5", ACTION_REFRESH
         MENUITEM SEPARATOR
         MENUITEM "Options\tF9", ACTION_OPTIONS
-        MENUITEM "Edit config file", ACTION_EDITCONFIG
+        MENUITEM "Edit config file\tCtr+Alt+E", ACTION_EDITCONFIG
         MENUITEM "Report a bug\tCtrl+Alt+B", ACTION_BUGREPORT
         MENUITEM "Donate\tCtrl+Alt+D", ACTION_DONATE
         MENUITEM "About\tF1", ACTION_ABOUT
@@ -98,4 +100,6 @@ MAIN_ACTIONS ACCELERATORS
     "D",            ACTION_DONATE, VIRTKEY, ALT, CONTROL
     "E",            ACTION_EDITCONFIG, VIRTKEY, ALT, CONTROL
     VK_F9,         ACTION_OPTIONS, VIRTKEY
+    VK_RETURN,     ACTION_PLAY, VIRTKEY
+    "E",            ACTION_EXPLOREFOLDER, VIRTKEY, CONTROL
 }
