--- a/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_YouTube.rc
+++ b/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_YouTube.rc
@@ -14,7 +14,7 @@
 // Dialog resources
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-TFrameDownloaderOptionsPageSpec_YouTube DIALOG 0, 0, 270, 83
+TFrameDownloaderOptionsPageSpec_YouTube DIALOG 0, 0, 270, 103
 STYLE DS_CONTROL | DS_SHELLFONT | WS_CHILDWINDOW | WS_MAXIMIZEBOX | WS_VISIBLE
 FONT 8, "Ms Shell Dlg"
 BEGIN
@@ -24,4 +24,5 @@ BEGIN
     EDITTEXT        IDC_EDIT_MAXWIDTH, 106, 14, 24, 14, ES_AUTOHSCROLL
     CONTROL         "Maximum video &height:", IDC_LABEL_MAXHEIGHT, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 30, 104, 10
     EDITTEXT        IDC_EDIT_MAXHEIGHT, 106, 28, 24, 14, ES_AUTOHSCROLL
+    AUTOCHECKBOX    "&Avoid .webm format", IDC_CHECK_AVOIDWEBM, 8, 42, 253, 10
 END
