--- a/source/GUI/WinAPI/Options/guiOptionsWINAPI_Downloads.rc
+++ b/source/GUI/WinAPI/Options/guiOptionsWINAPI_Downloads.rc
@@ -21,13 +21,15 @@ FONT 8, "Ms Shell Dlg"
     AUTOCHECKBOX    "&Automatically start downloads", IDC_CHECKBOX_AUTOSTARTDOWNLOADS, 8, 8, 253, 10
     AUTOCHECKBOX    "Automatically try &HTML parser", IDC_CHECKBOX_AUTOTRYHTMLPARSER, 8, 18, 253, 10
     AUTOCHECKBOX    "Download &subtitles if available", IDC_CHECKBOX_ENABLESUBTITLES, 8, 28, 253, 10
-    CONTROL         "&Download directory:", IDC_LABEL_DOWNLOADDIR, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 44, 74, 10
-    EDITTEXT        IDC_EDIT_DOWNLOADDIR, 82, 42, 168, 14, ES_AUTOHSCROLL
-    PUSHBUTTON      "...", IDC_BUTTON_DOWNLOADDIR, 250, 41, 11, 14
-    CONTROL         "&Existing files:", IDC_LABEL_OVERWRITEMODE, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 58, 74, 10
-    COMBOBOX        IDC_COMBO_OVERWRITEMODE, 82, 58, 179, 30, WS_TABSTOP | WS_TABSTOP | CBS_DROPDOWNLIST | CBS_HASSTRINGS
-    CONTROL         "&Converter:", IDC_LABEL_CONVERTER, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 74, 74, 10
-    COMBOBOX        IDC_COMBO_CONVERTER, 82, 74, 179, 30, WS_TABSTOP | WS_TABSTOP | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+    AUTOCHECKBOX    "Append a .part e&xtension while downloading", IDC_CHECKBOX_DOWNLOADTOTEMPFILES, 8, 38, 253, 10
+    AUTOCHECKBOX    "Store media into su&bdirectories according to their providers", IDC_CHECKBOX_DOWNLOADTOPROVIDERSUBDIRS, 8, 48, 253, 10
+    CONTROL         "&Download directory:", IDC_LABEL_DOWNLOADDIR, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 64, 74, 10
+    EDITTEXT        IDC_EDIT_DOWNLOADDIR, 82, 62, 168, 14, ES_AUTOHSCROLL
+    PUSHBUTTON      "...", IDC_BUTTON_DOWNLOADDIR, 250, 61, 11, 14
+    CONTROL         "&Existing files:", IDC_LABEL_OVERWRITEMODE, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 78, 74, 10
+    COMBOBOX        IDC_COMBO_OVERWRITEMODE, 82, 78, 179, 30, WS_TABSTOP | WS_TABSTOP | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+    CONTROL         "&Converter:", IDC_LABEL_CONVERTER, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 94, 74, 10
+    COMBOBOX        IDC_COMBO_CONVERTER, 82, 94, 179, 30, WS_TABSTOP | WS_TABSTOP | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 }
 
 
