--- a/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_CommonDownloader.rc
+++ b/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_CommonDownloader.rc
@@ -20,5 +20,6 @@ FONT 8, "Ms Shell Dlg"
 BEGIN
     AUTOCHECKBOX    "Download &subtitles if available", IDC_CHECKBOX_SUBTITLESENABLED, 8, 0, 253, 10
     AUTOCHECKBOX    "&Convert subtitles to .SRT format", IDC_CHECKBOX_CONVERTSUBTITLES, 8, 10, 253, 10
-    CONTROL         "", IDC_LABEL_EMPTYAREA, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP, 0, 20, 270, 63
+    AUTOCHECKBOX    "&Live stream mode (much slower, but more stable)", IDC_CHECKBOX_LIVESTREAM, 8, 20, 253, 10
+    CONTROL         "", IDC_LABEL_EMPTYAREA, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP, 0, 30, 270, 63
 END
