--- a/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_CommonDownloader.rc
+++ b/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_CommonDownloader.rc
@@ -14,12 +14,14 @@
 // Dialog resources
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-TFrameDownloaderOptionsPageCommon DIALOG 0, 0, 270, 83
+TFrameDownloaderOptionsPageCommon DIALOG 0, 0, 270, 111
 STYLE DS_CONTROL | DS_SHELLFONT | WS_CHILDWINDOW | WS_MAXIMIZEBOX | WS_VISIBLE
 FONT 8, "Ms Shell Dlg"
 BEGIN
     AUTOCHECKBOX    "Download &subtitles if available", IDC_CHECKBOX_SUBTITLESENABLED, 8, 0, 253, 10
     AUTOCHECKBOX    "&Convert subtitles to .SRT format", IDC_CHECKBOX_CONVERTSUBTITLES, 8, 10, 253, 10
     AUTOCHECKBOX    "&Live stream mode (much slower, but more stable)", IDC_CHECKBOX_LIVESTREAM, 8, 20, 253, 10
-    CONTROL         "", IDC_LABEL_EMPTYAREA, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP, 0, 30, 270, 63
+    CONTROL         "Secure &Token:", IDC_LABEL_SECURETOKEN, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 32, 104, 10
+    EDITTEXT        IDC_EDIT_SECURETOKEN, 106, 30, 155, 14, ES_AUTOHSCROLL
+    CONTROL         "", IDC_LABEL_EMPTYAREA, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP, 0, 48, 270, 63
 END
