--- a/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_CommonDownloader.rc
+++ b/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_CommonDownloader.rc
@@ -14,7 +14,7 @@
 // Dialog resources
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-TFrameDownloaderOptionsPageCommon DIALOG 0, 0, 270, 111
+TFrameDownloaderOptionsPageCommon DIALOG 0, 0, 270, 147
 STYLE DS_CONTROL | DS_SHELLFONT | WS_CHILDWINDOW | WS_MAXIMIZEBOX | WS_VISIBLE
 FONT 8, "Ms Shell Dlg"
 BEGIN
@@ -23,5 +23,10 @@ BEGIN
     AUTOCHECKBOX    "&Live stream mode (much slower, but more stable)", IDC_CHECKBOX_LIVESTREAM, 8, 20, 253, 10
     CONTROL         "Secure &Token:", IDC_LABEL_SECURETOKEN, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 32, 104, 10
     EDITTEXT        IDC_EDIT_SECURETOKEN, 106, 30, 155, 14, ES_AUTOHSCROLL
-    CONTROL         "", IDC_LABEL_EMPTYAREA, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP, 0, 48, 270, 63
+    CONTROL         "&User name:", IDC_LABEL_USERNAME, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 52, 104, 10
+    EDITTEXT        IDC_EDIT_USERNAME, 106, 50, 155, 14, ES_AUTOHSCROLL
+    CONTROL         "&Password:", IDC_LABEL_PASSWORD, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 68, 104, 10
+    EDITTEXT        IDC_EDIT_PASSWORD, 106, 66, 155, 14, ES_AUTOHSCROLL
+
+    CONTROL         "", IDC_LABEL_EMPTYAREA, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP, 0, 84, 270, 63
 END
