--- a/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_Barrandov.rc
+++ b/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_Barrandov.rc
@@ -18,4 +18,5 @@ TFrameDownloaderOptionsPageSpec_Barrandov DIALOG 0, 0, 270, 83
 STYLE DS_CONTROL | DS_SHELLFONT | WS_CHILDWINDOW | WS_MAXIMIZEBOX | WS_VISIBLE
 FONT 8, "Ms Shell Dlg"
 BEGIN
+    AUTOCHECKBOX    "&Avoid HD content", IDC_CHECK_AVOIDHD, 8, 2, 253, 10
 END
