--- a/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_CT.rc
+++ b/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_CT.rc
@@ -18,4 +18,6 @@ TFrameDownloaderOptionsPageSpec_CT DIALOG 0, 0, 270, 83
 STYLE DS_CONTROL | DS_SHELLFONT | WS_CHILDWINDOW | WS_MAXIMIZEBOX | WS_VISIBLE
 FONT 8, "Ms Shell Dlg"
 BEGIN
+    CONTROL         "Maximum video &bitrate:", IDC_LABEL_MAXBITRATE, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 2, 104, 10
+    EDITTEXT        IDC_EDIT_MAXBITRATE, 106, 0, 24, 14, ES_AUTOHSCROLL
 END
