--- a/source/YTD.dproj
+++ b/source/YTD.dproj
@@ -42,11 +42,11 @@
 				<MainSource>MainSource</MainSource>
 			</DelphiCompile>
 			<DCCReference Include="Common\uLanguages.pas"/>
+			<DCCReference Include="Common\uMain.pas"/>
 			<DCCReference Include="Common\uFunctions.pas"/>
 			<DCCReference Include="Common\uMessages.pas"/>
 			<DCCReference Include="Common\uOptions.pas"/>
 			<DCCReference Include="Common\uStringConsts.pas"/>
-			<DCCReference Include="Common\uXML.pas"/>
 			<DCCReference Include="Common\uDownloadClassifier.pas"/>
 			<DCCReference Include="Base\uDownloader.pas"/>
 			<DCCReference Include="Base\uCommonDownloader.pas"/>
@@ -62,26 +62,32 @@
 			<DCCReference Include="Base\uPlaylistDownloader.pas"/>
 			<DCCReference Include="Downloaders\down123VideoNL.pas"/>
 			<DCCReference Include="Downloaders\down1hdRo.pas"/>
+			<DCCReference Include="Downloaders\down3NewsCoNz.pas"/>
+			<DCCReference Include="Downloaders\down4TV.pas"/>
 			<DCCReference Include="Downloaders\down5min.pas"/>
+			<DCCReference Include="Downloaders\downAcademicEarth.pas"/>
 			<DCCReference Include="Downloaders\downAgresori.pas"/>
 			<DCCReference Include="Downloaders\downAktualne.pas"/>
 			<DCCReference Include="Downloaders\downAlternativaTV.pas"/>
+			<DCCReference Include="Downloaders\downAncensored.pas"/>
 			<DCCReference Include="Downloaders\downAngryAlien.pas"/>
-			<DCCReference Include="Downloaders\downAutoSalonTV.pas"/>
+			<DCCReference Include="Downloaders\downArchive.pas"/>
 			<DCCReference Include="Downloaders\downAutoTube.pas"/>
 			<DCCReference Include="Downloaders\downBahnorama.pas"/>
 			<DCCReference Include="Downloaders\downBandZone.pas"/>
 			<DCCReference Include="Downloaders\downBarrandovTV.pas"/>
 			<DCCReference Include="Downloaders\downBBCNews.pas"/>
 			<DCCReference Include="Downloaders\downBlennus.pas"/>
+			<DCCReference Include="Downloaders\downBlipTv_Embed.pas"/>
 			<DCCReference Include="Downloaders\downBlipTv.pas"/>
-			<DCCReference Include="Downloaders\downBlipTvV2.pas"/>
+			<DCCReference Include="Downloaders\downBMovies.pas"/>
 			<DCCReference Include="Downloaders\downBofunk.pas"/>
 			<DCCReference Include="Downloaders\downBolt.pas"/>
 			<DCCReference Include="Downloaders\downBomba.pas"/>
 			<DCCReference Include="Downloaders\downBreak.pas"/>
 			<DCCReference Include="Downloaders\downBreakEmbed.pas"/>
 			<DCCReference Include="Downloaders\downBreakEmbedV2.pas"/>
+			<DCCReference Include="Downloaders\downBTVCz.pas"/>
 			<DCCReference Include="Downloaders\downCasSk.pas"/>
 			<DCCReference Include="Downloaders\downCekniTo.pas"/>
 			<DCCReference Include="Downloaders\downCeskeDrahy.pas"/>
@@ -93,6 +99,8 @@
 			<DCCReference Include="Downloaders\downClipfishV2.pas"/>
 			<DCCReference Include="Downloaders\downCNBC.pas"/>
 			<DCCReference Include="Downloaders\downCollegeHumor.pas"/>
+			<DCCReference Include="Downloaders\downCriticalPast.pas"/>
+			<DCCReference Include="Downloaders\downCSFD.pas"/>
 			<DCCReference Include="Downloaders\downCSmaTalent.pas"/>
 			<DCCReference Include="Downloaders\downCT.pas"/>
 			<DCCReference Include="Downloaders\downCurrent.pas"/>
@@ -109,8 +117,10 @@
 			<DCCReference Include="Downloaders\downEbaumsWorld.pas"/>
 			<DCCReference Include="Downloaders\downEHow.pas"/>
 			<DCCReference Include="Downloaders\downESPN.pas"/>
+			<DCCReference Include="Downloaders\downEuroGamer.pas"/>
 			<DCCReference Include="Downloaders\downEVTV1.pas"/>
 			<DCCReference Include="Downloaders\downFacebook.pas"/>
+			<DCCReference Include="Downloaders\downFarmarHladaZenu.pas"/>
 			<DCCReference Include="Downloaders\downFileCabi.pas"/>
 			<DCCReference Include="Downloaders\downFishki.pas"/>
 			<DCCReference Include="Downloaders\downFlickr.pas"/>
@@ -121,33 +131,57 @@
 			<DCCReference Include="Downloaders\downFunnyOrDie.pas"/>
 			<DCCReference Include="Downloaders\downG4TV.pas"/>
 			<DCCReference Include="Downloaders\downGameAnyone.pas"/>
+			<DCCReference Include="Downloaders\downGamePark.pas"/>
+			<DCCReference Include="Downloaders\downGameZone.pas"/>
+			<DCCReference Include="Downloaders\downGamesTiscaliCz.pas"/>
 			<DCCReference Include="Downloaders\downGodTube.pas"/>
+			<DCCReference Include="Downloaders\downGoogleVideo_Embed.pas"/>
+			<DCCReference Include="Downloaders\downGoogleVideo.pas"/>
 			<DCCReference Include="Downloaders\downGuba.pas"/>
 			<DCCReference Include="Downloaders\downGrindTV.pas"/>
 			<DCCReference Include="Downloaders\downHasici150.pas"/>
+			<DCCReference Include="Downloaders\downHejbejSe.pas"/>
 			<DCCReference Include="Downloaders\downHellTV.pas"/>
+			<DCCReference Include="Downloaders\downHokejCz.pas"/>
 			<DCCReference Include="Downloaders\downHrej.pas"/>
+			<DCCReference Include="Downloaders\downHudebniVideoKlipy.pas"/>
+			<DCCReference Include="Downloaders\downHuste.pas"/>
 			<DCCReference Include="Downloaders\downIConcerts.pas"/>
 			<DCCReference Include="Downloaders\downIDnes_Embed.pas"/>
 			<DCCReference Include="Downloaders\downIDnes.pas"/>
 			<DCCReference Include="Downloaders\downIHned.pas"/>
+			<DCCReference Include="Downloaders\downILikeBike.pas"/>
 			<DCCReference Include="Downloaders\downIPrima.pas"/>
+			<DCCReference Include="Downloaders\downIPrima_ShowJanaKrause.pas"/>
 			<DCCReference Include="Downloaders\downIViewTube.pas"/>
 			<DCCReference Include="Downloaders\downJoj.pas"/>
 			<DCCReference Include="Downloaders\downJoj_Porady.pas"/>
+			<DCCReference Include="Downloaders\downKanalTurk.pas"/>
+			<DCCReference Include="Downloaders\downKinobox.pas"/>
+			<DCCReference Include="Downloaders\downKiwi.pas"/>
 			<DCCReference Include="Downloaders\downKontraband.pas"/>
 			<DCCReference Include="Downloaders\downKukaj.pas"/>
+			<DCCReference Include="Downloaders\downLaola1.pas"/>
+			<DCCReference Include="Downloaders\downLenkaFilipova.pas"/>
+			<DCCReference Include="Downloaders\downLevelTV.pas"/>
 			<DCCReference Include="Downloaders\downLibimSeTi.pas"/>
 			<DCCReference Include="Downloaders\downLiveLeak.pas"/>
 			<DCCReference Include="Downloaders\downLiveLeakEmbedded.pas"/>
 			<DCCReference Include="Downloaders\downLiveVideo.pas"/>
 			<DCCReference Include="Downloaders\downLoupak.pas"/>
+			<DCCReference Include="Downloaders\downMamaOzenMa.pas"/>
 			<DCCReference Include="Downloaders\downMarkiza.pas"/>
+			<DCCReference Include="Downloaders\downMarkizaParticka.pas"/>
 			<DCCReference Include="Downloaders\downMediaSport.pas"/>
 			<DCCReference Include="Downloaders\downMegaVideo.pas"/>
+			<DCCReference Include="Downloaders\downMegaVideo_Embed.pas"/>
 			<DCCReference Include="Downloaders\downMetaCafe.pas"/>
 			<DCCReference Include="Downloaders\downMetooCz.pas"/>
+			<DCCReference Include="Downloaders\downMetooSk.pas"/>
+			<DCCReference Include="Downloaders\downMetropolCZ.pas"/>
+			<DCCReference Include="Downloaders\downMetropolCZ_Zpravy.pas"/>
 			<DCCReference Include="Downloaders\downMetropolTV.pas"/>
+			<DCCReference Include="Downloaders\downMixerCZ.pas"/>
 			<DCCReference Include="Downloaders\downMojeTelevize.pas"/>
 			<DCCReference Include="Downloaders\downMojeVideo.pas"/>
 			<DCCReference Include="Downloaders\downMojeVideoSk.pas"/>
@@ -161,27 +195,37 @@
 			<DCCReference Include="Downloaders\downMuzu.pas"/>
 			<DCCReference Include="Downloaders\downMySpace.pas"/>
 			<DCCReference Include="Downloaders\downMyUbo.pas"/>
+			<DCCReference Include="Downloaders\downMyvi.pas"/>
+			<DCCReference Include="Downloaders\downMyvi_Embed.pas"/>
 			<DCCReference Include="Downloaders\downNaStojaka.pas"/>
 			<DCCReference Include="Downloaders\downNBC.pas"/>
 			<DCCReference Include="Downloaders\downNavratDoReality.pas"/>
+			<DCCReference Include="Downloaders\downNebickoVPapulke.pas"/>
+			<DCCReference Include="Downloaders\downNHL.pas"/>
 			<DCCReference Include="Downloaders\downNJoy.pas"/>
 			<DCCReference Include="Downloaders\downNothingToxic.pas"/>
 			<DCCReference Include="Downloaders\downNova.pas"/>
 			<DCCReference Include="Downloaders\downNovaMov.pas"/>
 			<DCCReference Include="Downloaders\downNovaMov_Embed.pas"/>
 			<DCCReference Include="Downloaders\downNovinky.pas"/>
-			<DCCReference Include="Downloaders\downNovinkyV2.pas"/>
+			<DCCReference Include="Downloaders\downOKTeam.pas"/>
+			<DCCReference Include="Downloaders\downOsobnostiCZ.pas"/>
 			<DCCReference Include="Downloaders\downOverStream.pas"/>
 			<DCCReference Include="Downloaders\downPBS.pas"/>
 			<DCCReference Include="Downloaders\downPCPlanets.pas"/>
+			<DCCReference Include="Downloaders\downPicSpoon.pas"/>
+			<DCCReference Include="Downloaders\downPlaywire.pas"/>
 			<DCCReference Include="Downloaders\downPracticalMethod.pas"/>
 			<DCCReference Include="Downloaders\downPrahovaHD.pas"/>
 			<DCCReference Include="Downloaders\downPrazdninyVTelci.pas"/>
 			<DCCReference Include="Downloaders\downPrimaCool.pas"/>
 			<DCCReference Include="Downloaders\downProglas.pas"/>
+			<DCCReference Include="Downloaders\downProstoPleer.pas"/>
 			<DCCReference Include="Downloaders\downPublicTV.pas"/>
 			<DCCReference Include="Downloaders\downQipRu_Embed.pas"/>
+			<DCCReference Include="Downloaders\downR1ZAK.pas"/>
 			<DCCReference Include="Downloaders\downRaajje.pas"/>
+			<DCCReference Include="Downloaders\downRajce.pas"/>
 			<DCCReference Include="Downloaders\downRevver.pas"/>
 			<DCCReference Include="Downloaders\downRingTV.pas"/>
 			<DCCReference Include="Downloaders\downRockstarGames.pas"/>
@@ -189,11 +233,15 @@
 			<DCCReference Include="Downloaders\downRTA.pas"/>
 			<DCCReference Include="Downloaders\downRTA_Embed.pas"/>
 			<DCCReference Include="Downloaders\downRtlNl.pas"/>
+			<DCCReference Include="Downloaders\downRuTube.pas"/>
 			<DCCReference Include="Downloaders\downSefka.pas"/>
 			<DCCReference Include="Downloaders\downSerialOnline.pas"/>
 			<DCCReference Include="Downloaders\downSerialyCZ.pas"/>
 			<DCCReference Include="Downloaders\downSevenLoad.pas"/>
+			<DCCReference Include="Downloaders\downShackNews.pas"/>
+			<DCCReference Include="Downloaders\downSibnet.pas"/>
 			<DCCReference Include="Downloaders\downSmeSK.pas"/>
+			<DCCReference Include="Downloaders\downSmotri.pas"/>
 			<DCCReference Include="Downloaders\downSnotr.pas"/>
 			<DCCReference Include="Downloaders\downSoundCloud.pas"/>
 			<DCCReference Include="Downloaders\downSpike.pas"/>
@@ -201,6 +249,7 @@
 			<DCCReference Include="Downloaders\downSportStream.pas"/>
 			<DCCReference Include="Downloaders\downStagevu.pas"/>
 			<DCCReference Include="Downloaders\downStastneVdovy.pas"/>
+			<DCCReference Include="Downloaders\downSteamPowered.pas"/>
 			<DCCReference Include="Downloaders\downStickam.pas"/>
 			<DCCReference Include="Downloaders\downStream.pas"/>
 			<DCCReference Include="Downloaders\downStreetFire.pas"/>
@@ -215,55 +264,76 @@
 			<DCCReference Include="Downloaders\downTodaysBigThing.pas"/>
 			<DCCReference Include="Downloaders\downTontuyau.pas"/>
 			<DCCReference Include="Downloaders\downTotallyCrap.pas"/>
+			<DCCReference Include="Downloaders\downTV2Nord.pas"/>
 			<DCCReference Include="Downloaders\downTV4PlaySE.pas"/>
 			<DCCReference Include="Downloaders\downTV7.pas"/>
 			<DCCReference Include="Downloaders\downTVcom.pas"/>
 			<DCCReference Include="Downloaders\downTVLux.pas"/>
 			<DCCReference Include="Downloaders\downTVNoe.pas"/>
 			<DCCReference Include="Downloaders\downTVSpl.pas"/>
+			<DCCReference Include="Downloaders\downTVVysocina.pas"/>
 			<DCCReference Include="Downloaders\downTyzdenSk.pas"/>
+			<DCCReference Include="Downloaders\downUlozTo.pas"/>
 			<DCCReference Include="Downloaders\downUniMinnesota.pas"/>
 			<DCCReference Include="Downloaders\downUStream.pas"/>
+			<DCCReference Include="Downloaders\downVeeHD.pas"/>
 			<DCCReference Include="Downloaders\downVideaCesky.pas"/>
 			<DCCReference Include="Downloaders\downVideoAlbumyAzet.pas"/>
+			<DCCReference Include="Downloaders\downVideoBB.pas"/>
 			<DCCReference Include="Downloaders\downVideoClipsDump.pas"/>
+			<DCCReference Include="Downloaders\downVideoNurKz.pas"/>
 			<DCCReference Include="Downloaders\downVideoPortalSfTV.pas"/>
+			<DCCReference Include="Downloaders\downVideoPortalSK.pas"/>
 			<DCCReference Include="Downloaders\downVideoTiscaliCZ.pas"/>
 			<DCCReference Include="Downloaders\downVideu.pas"/>
+			<DCCReference Include="Downloaders\downViki.pas"/>
 			<DCCReference Include="Downloaders\downVimeo.pas"/>
+			<DCCReference Include="Downloaders\downVimeo_Embed.pas"/>
 			<DCCReference Include="Downloaders\downVitalMtb.pas"/>
 			<DCCReference Include="Downloaders\downVKontakteRuEmbed.pas"/>
 			<DCCReference Include="Downloaders\downWeGame.pas"/>
 			<DCCReference Include="Downloaders\downWimp.pas"/>
 			<DCCReference Include="Downloaders\downWordPressTV.pas"/>
+			<DCCReference Include="Downloaders\downWorldClub.pas"/>
 			<DCCReference Include="Downloaders\downWrzuta.pas"/>
 			<DCCReference Include="Downloaders\downYikers.pas"/>
 			<DCCReference Include="Downloaders\downYouTube.pas"/>
+			<DCCReference Include="Downloaders\downYouTu_Be.pas"/>
+			<DCCReference Include="Downloaders\downYouTubeNoCookie.pas"/>
 			<DCCReference Include="Downloaders\downZ1TV.pas"/>
+			<DCCReference Include="Downloaders\downZapiksFr.pas"/>
 			<DCCReference Include="Downloaders\downZDF.pas"/>
 			<DCCReference Include="Downloaders\downZkoukniTo.pas"/>
 			<DCCReference Include="Downloaders\downZkoukniToEmbed.pas"/>
 			<DCCReference Include="Downloaders\downZmozek.pas"/>
+			<DCCReference Include="Downloaders\XXX\xxx8teenXXX.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxAdultLoop.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxBeeg.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxBrazzers.pas"/>
+			<DCCReference Include="Downloaders\XXX\xxxCastingXXX.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxDachix.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxDancingBear.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxEmpFlix.pas"/>
+			<DCCReference Include="Downloaders\XXX\xxxEmpFlix_V2.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxExtremeTube.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxFreePornoZdarma.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxFreeVideoCz.pas"/>
+			<DCCReference Include="Downloaders\XXX\xxxGavinXXX.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxGrinvi.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxHardSexTube.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxJenProMuze.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxKeezMovies.pas"/>
+			<DCCReference Include="Downloaders\XXX\xxxKeezMovies_Embed.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxMachoVideo.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxMegaPorn.pas"/>
+			<DCCReference Include="Downloaders\XXX\xxxMojePornoSK.pas"/>
+			<DCCReference Include="Downloaders\XXX\xxxMotherless.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxPornHost.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxPornHub.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxPornHubEmbed.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxPornoTube.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxPornoZdarma.pas"/>
+			<DCCReference Include="Downloaders\XXX\xxxRawTube.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxRedTube.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxRozzlobeniMuzi.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxRude.pas"/>
@@ -285,11 +355,15 @@
 			<DCCReference Include="Downloaders\XXX\xxxYouPorn.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxYuvutu.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxZakulisi.pas"/>
-			<DCCReference Include="Playlists\listBlipTV.pas"/>
-			<DCCReference Include="Playlists\listGameAnyone.pas"/>
+			<DCCReference Include="Downloaders\XXX\xxxZlutySnih.pas"/>
+			<DCCReference Include="Downloaders\XXX\xxxZvraceny.pas"/>
 			<DCCReference Include="Playlists\listHTML.pas"/>
 			<DCCReference Include="Playlists\listHTMLfile.pas"/>
+			<DCCReference Include="Playlists\listTXT.pas"/>
+			<DCCReference Include="Playlists\listArchive.pas"/>
 			<DCCReference Include="Playlists\listBing.pas"/>
+			<DCCReference Include="Playlists\listBlipTV.pas"/>
+			<DCCReference Include="Playlists\listGameAnyone.pas"/>
 			<DCCReference Include="Playlists\listYouTube.pas"/>
 			<DCCReference Include="Playlists\listYouTubePage.pas"/>
 			<None Include="YTD.version">
@@ -323,14 +397,15 @@
 						<Parameters Name="UseLauncher">False</Parameters>
 						<Parameters Name="LoadAllSymbols">True</Parameters>
 						<Parameters Name="LoadUnspecifiedSymbols">False</Parameters>
+						<Parameters Name="RunParams">http://server3.streaming.cesnet.cz/others/av/tydenvedy/2009/amazonie.wmv</Parameters>
 					</Parameters>
 					<VersionInfo>
 						<VersionInfo Name="IncludeVerInfo">True</VersionInfo>
 						<VersionInfo Name="AutoIncBuild">True</VersionInfo>
-						<VersionInfo Name="MajorVer">0</VersionInfo>
-						<VersionInfo Name="MinorVer">86</VersionInfo>
+						<VersionInfo Name="MajorVer">1</VersionInfo>
+						<VersionInfo Name="MinorVer">7</VersionInfo>
 						<VersionInfo Name="Release">0</VersionInfo>
-						<VersionInfo Name="Build">706</VersionInfo>
+						<VersionInfo Name="Build">872</VersionInfo>
 						<VersionInfo Name="Debug">False</VersionInfo>
 						<VersionInfo Name="PreRelease">False</VersionInfo>
 						<VersionInfo Name="Special">False</VersionInfo>
@@ -342,13 +417,13 @@
 					<VersionInfoKeys>
 						<VersionInfoKeys Name="CompanyName">Pepak</VersionInfoKeys>
 						<VersionInfoKeys Name="FileDescription">YTD</VersionInfoKeys>
-						<VersionInfoKeys Name="FileVersion">0.86.0.706</VersionInfoKeys>
+						<VersionInfoKeys Name="FileVersion">1.7.0.872</VersionInfoKeys>
 						<VersionInfoKeys Name="InternalName">YTD</VersionInfoKeys>
 						<VersionInfoKeys Name="LegalCopyright">(c) 2009-11 Pepak</VersionInfoKeys>
 						<VersionInfoKeys Name="LegalTrademarks"/>
 						<VersionInfoKeys Name="OriginalFilename">ytd.exe</VersionInfoKeys>
 						<VersionInfoKeys Name="ProductName">YTD</VersionInfoKeys>
-						<VersionInfoKeys Name="ProductVersion">0.82.0.614</VersionInfoKeys>
+						<VersionInfoKeys Name="ProductVersion">1.7.0.776</VersionInfoKeys>
 						<VersionInfoKeys Name="Comments">http://www.pepak.net/ytd</VersionInfoKeys>
 					</VersionInfoKeys>
 				</Delphi.Personality>
