--- a/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_CommonDownloader.rc
+++ b/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_CommonDownloader.rc
@@ -21,12 +21,13 @@ BEGIN
     AUTOCHECKBOX    "Download &subtitles if available", IDC_CHECKBOX_SUBTITLESENABLED, 8, 0, 253, 10
     AUTOCHECKBOX    "&Convert subtitles to .SRT format", IDC_CHECKBOX_CONVERTSUBTITLES, 8, 10, 253, 10
     AUTOCHECKBOX    "&Live stream mode (much slower, but more stable)", IDC_CHECKBOX_LIVESTREAM, 8, 20, 253, 10
-    CONTROL         "Secure &Token:", IDC_LABEL_SECURETOKEN, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 32, 104, 10
-    EDITTEXT        IDC_EDIT_SECURETOKEN, 106, 30, 155, 14, ES_AUTOHSCROLL
-    CONTROL         "&User name:", IDC_LABEL_USERNAME, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 52, 104, 10
-    EDITTEXT        IDC_EDIT_USERNAME, 106, 50, 155, 14, ES_AUTOHSCROLL
-    CONTROL         "&Password:", IDC_LABEL_PASSWORD, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 68, 104, 10
-    EDITTEXT        IDC_EDIT_PASSWORD, 106, 66, 155, 14, ES_AUTOHSCROLL
+    AUTOCHECKBOX    "&Realtime mode (may be slower, but doesn't skip back)", IDC_CHECKBOX_REALTIME, 8, 30, 253, 10
+    CONTROL         "Secure &Token:", IDC_LABEL_SECURETOKEN, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 42, 104, 10
+    EDITTEXT        IDC_EDIT_SECURETOKEN, 106, 40, 155, 14, ES_AUTOHSCROLL
+    CONTROL         "&User name:", IDC_LABEL_USERNAME, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 62, 104, 10
+    EDITTEXT        IDC_EDIT_USERNAME, 106, 60, 155, 14, ES_AUTOHSCROLL
+    CONTROL         "&Password:", IDC_LABEL_PASSWORD, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 78, 104, 10
+    EDITTEXT        IDC_EDIT_PASSWORD, 106, 76, 155, 14, ES_AUTOHSCROLL
 
-    CONTROL         "", IDC_LABEL_EMPTYAREA, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP, 0, 84, 270, 63
+    CONTROL         "", IDC_LABEL_EMPTYAREA, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP, 0, 94, 270, 63
 END
