--- a/source/ytd.cfg
+++ b/source/ytd.cfg
@@ -39,4 +39,4 @@
 -O"lib\pepak\delphi5;lib\pepak;lib\pepak\apiform;lib\synapse\source\lib;lib\perlregex;lib\rtmpdump;lib\msdl\src;lib\dxgettext\delphi5;lib\NativeXml;lib\lkJSON;Units"
 -I"lib\pepak\delphi5;lib\pepak;lib\pepak\apiform;lib\synapse\source\lib;lib\perlregex;lib\rtmpdump;lib\msdl\src;lib\dxgettext\delphi5;lib\NativeXml;lib\lkJSON;Units"
 -R"lib\pepak\delphi5;lib\pepak;lib\pepak\apiform;lib\synapse\source\lib;lib\perlregex;lib\rtmpdump;lib\msdl\src;lib\dxgettext\delphi5;lib\NativeXml;lib\lkJSON;Units"
--DPEPAK;PEPAK_YTD;XXX;DEBUG
+-DPEPAK;PEPAK_YTD;XXX;
