--- a/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_Nova.rc
+++ b/source/GUI/WinAPI/Downloaders/guiOptionsWINAPI_Nova.rc
@@ -19,6 +19,8 @@ STYLE DS_CONTROL | DS_SHELLFONT | WS_CHILDWINDOW | WS_MAXIMIZEBOX | WS_VISIBLE
 FONT 8, "Ms Shell Dlg"
 BEGIN
     AUTOCHECKBOX    "Download in &low quality", IDC_CHECKBOX_LOWQUALITY, 8, 0, 253, 10
-    CONTROL         "Secret &password:", IDC_LABEL_SECRETPASSWORD, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 12, 104, 10
+    CONTROL         "Resolver password:", IDC_LABEL_SECRETPASSWORD, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 12, 104, 10
     EDITTEXT        IDC_EDIT_SECRETPASSWORD, 106, 10, 155, 14, ES_AUTOHSCROLL
+    CONTROL         "Config password:", IDC_LABEL_CONFIGPASSWORD, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 22, 104, 10
+    EDITTEXT        IDC_EDIT_CONFIGPASSWORD, 106, 20, 155, 14, ES_AUTOHSCROLL
 END
