--- a/source/YTD.dproj
+++ b/source/YTD.dproj
@@ -108,7 +108,6 @@
 			<DCCReference Include="Downloaders\downCollegeHumor.pas"/>
 			<DCCReference Include="Downloaders\downCriticalPast.pas"/>
 			<DCCReference Include="Downloaders\downCSFD.pas"/>
-			<DCCReference Include="Downloaders\downCSmaTalent.pas"/>
 			<DCCReference Include="Downloaders\downCT.pas"/>
 			<DCCReference Include="Downloaders\downCurrent.pas"/>
 			<DCCReference Include="Downloaders\downDailyHaha.pas"/>
@@ -129,7 +128,6 @@
 			<DCCReference Include="Downloaders\downEuroseptik.pas"/>
 			<DCCReference Include="Downloaders\downEVTV1.pas"/>
 			<DCCReference Include="Downloaders\downFacebook.pas"/>
-			<DCCReference Include="Downloaders\downFarmarHladaZenu.pas"/>
 			<DCCReference Include="Downloaders\downFileCabi.pas"/>
 			<DCCReference Include="Downloaders\downFishki.pas"/>
 			<DCCReference Include="Downloaders\downFlickr.pas"/>
@@ -166,7 +164,6 @@
 			<DCCReference Include="Downloaders\downIViewTube.pas"/>
 			<DCCReference Include="Downloaders\downJenProZeny.pas"/>
 			<DCCReference Include="Downloaders\downJoj.pas"/>
-			<DCCReference Include="Downloaders\downJoj_Porady.pas"/>
 			<DCCReference Include="Downloaders\downKanalTurk.pas"/>
 			<DCCReference Include="Downloaders\downKinobox.pas"/>
 			<DCCReference Include="Downloaders\downKiwi.pas"/>
@@ -181,7 +178,6 @@
 			<DCCReference Include="Downloaders\downLiveLeakEmbedded.pas"/>
 			<DCCReference Include="Downloaders\downLiveVideo.pas"/>
 			<DCCReference Include="Downloaders\downLoupak.pas"/>
-			<DCCReference Include="Downloaders\downMamaOzenMa.pas"/>
 			<DCCReference Include="Downloaders\downMarkiza.pas"/>
 			<DCCReference Include="Downloaders\downMarkizaParticka.pas"/>
 			<DCCReference Include="Downloaders\downMatrix2001.pas"/>
@@ -212,6 +208,7 @@
 			<DCCReference Include="Downloaders\downMyUbo.pas"/>
 			<DCCReference Include="Downloaders\downMyvi.pas"/>
 			<DCCReference Include="Downloaders\downMyvi_Embed.pas"/>
+			<DCCReference Include="Downloaders\downNaHnoji.pas"/>
 			<DCCReference Include="Downloaders\downNaStojaka.pas"/>
 			<DCCReference Include="Downloaders\downNBC.pas"/>
 			<DCCReference Include="Downloaders\downNavratDoReality.pas"/>
@@ -254,9 +251,9 @@
 			<DCCReference Include="Downloaders\downRTA.pas"/>
 			<DCCReference Include="Downloaders\downRTA_Embed.pas"/>
 			<DCCReference Include="Downloaders\downRtlNl.pas"/>
+			<DCCReference Include="Downloaders\downRTVSSk.pas"/>
 			<DCCReference Include="Downloaders\downRuTube.pas"/>
 			<DCCReference Include="Downloaders\downSchoolOfCare.pas"/>
-			<DCCReference Include="Downloaders\downSefka.pas"/>
 			<DCCReference Include="Downloaders\downSerialOnline.pas"/>
 			<DCCReference Include="Downloaders\downSerialyCZ.pas"/>
 			<DCCReference Include="Downloaders\downSevenLoad.pas"/>
@@ -292,6 +289,7 @@
 			<DCCReference Include="Downloaders\downTV4PlaySE.pas"/>
 			<DCCReference Include="Downloaders\downTV7.pas"/>
 			<DCCReference Include="Downloaders\downTVcom.pas"/>
+			<DCCReference Include="Downloaders\downTVHNOnlineSk.pas"/>
 			<DCCReference Include="Downloaders\downTVLux.pas"/>
 			<DCCReference Include="Downloaders\downTVNoe.pas"/>
 			<DCCReference Include="Downloaders\downTVSpl.pas"/>
@@ -308,7 +306,6 @@
 			<DCCReference Include="Downloaders\downVideoClipsDump.pas"/>
 			<DCCReference Include="Downloaders\downVideoNurKz.pas"/>
 			<DCCReference Include="Downloaders\downVideoPortalSfTV.pas"/>
-			<DCCReference Include="Downloaders\downVideoPortalSK.pas"/>
 			<DCCReference Include="Downloaders\downVideoTiscaliCZ.pas"/>
 			<DCCReference Include="Downloaders\downVideu.pas"/>
 			<DCCReference Include="Downloaders\downViiSk.pas"/>
@@ -434,7 +431,7 @@
 						<VersionInfo Name="MajorVer">1</VersionInfo>
 						<VersionInfo Name="MinorVer">25</VersionInfo>
 						<VersionInfo Name="Release">0</VersionInfo>
-						<VersionInfo Name="Build">988</VersionInfo>
+						<VersionInfo Name="Build">989</VersionInfo>
 						<VersionInfo Name="Debug">False</VersionInfo>
 						<VersionInfo Name="PreRelease">False</VersionInfo>
 						<VersionInfo Name="Special">False</VersionInfo>
@@ -446,7 +443,7 @@
 					<VersionInfoKeys>
 						<VersionInfoKeys Name="CompanyName">Pepak</VersionInfoKeys>
 						<VersionInfoKeys Name="FileDescription">YTD</VersionInfoKeys>
-						<VersionInfoKeys Name="FileVersion">1.25.0.988</VersionInfoKeys>
+						<VersionInfoKeys Name="FileVersion">1.25.0.989</VersionInfoKeys>
 						<VersionInfoKeys Name="InternalName">YTD</VersionInfoKeys>
 						<VersionInfoKeys Name="LegalCopyright">(c) 2009-11 Pepak</VersionInfoKeys>
 						<VersionInfoKeys Name="LegalTrademarks"/>
