--- a/source/GUI/WinAPI/guiMainWINAPI.rc
+++ b/source/GUI/WinAPI/guiMainWINAPI.rc
@@ -85,21 +85,22 @@ MAIN_ACTIONS ACCELERATORS
     VK_SPACE,      ACTION_START, VIRTKEY
     VK_ESCAPE,     ACTION_STOP, VIRTKEY
     VK_INSERT,     ACTION_ADDFROMCLIPBOARD1, VIRTKEY, SHIFT
-    "V",            ACTION_ADDFROMCLIPBOARD2, VIRTKEY, CONTROL
+    "V",           ACTION_ADDFROMCLIPBOARD2, VIRTKEY, CONTROL
     VK_INSERT,     ACTION_COPYTOCLIPBOARD1, VIRTKEY, CONTROL
-    "C",            ACTION_COPYTOCLIPBOARD2, VIRTKEY, CONTROL
-    "A",            ACTION_SELECTALL, VIRTKEY, CONTROL
+    "C",           ACTION_COPYTOCLIPBOARD2, VIRTKEY, CONTROL
+    "A",           ACTION_SELECTALL, VIRTKEY, CONTROL
     VK_F5,         ACTION_REFRESH, VIRTKEY
-    "P",            ACTION_ADDFROMWEBPAGE, VIRTKEY, CONTROL
-    "H",            ACTION_ADDFROMHTML, VIRTKEY, CONTROL
-    "O",            ACTION_ADDFROMFILE, VIRTKEY, CONTROL
-    "S",            ACTION_SAVETOFILE, VIRTKEY, CONTROL
+    "P",           ACTION_ADDFROMWEBPAGE, VIRTKEY, CONTROL
+    "H",           ACTION_ADDFROMHTML, VIRTKEY, CONTROL
+    "O",           ACTION_ADDFROMFILE, VIRTKEY, CONTROL
+    "S",           ACTION_SAVETOFILE, VIRTKEY, CONTROL
     VK_F1,         ACTION_ABOUT, VIRTKEY
-    "N",            ACTION_CONVERT, VIRTKEY, CONTROL
-    "B",            ACTION_BUGREPORT, VIRTKEY, ALT, CONTROL
-    "D",            ACTION_DONATE, VIRTKEY, ALT, CONTROL
-    "E",            ACTION_EDITCONFIG, VIRTKEY, ALT, CONTROL
+    "N",           ACTION_CONVERT, VIRTKEY, CONTROL
+    "B",           ACTION_BUGREPORT, VIRTKEY, ALT, CONTROL
+    "D",           ACTION_DONATE, VIRTKEY, ALT, CONTROL
+    "E",           ACTION_EDITCONFIG, VIRTKEY, ALT, CONTROL
     VK_F9,         ACTION_OPTIONS, VIRTKEY
     VK_RETURN,     ACTION_PLAY, VIRTKEY
-    "E",            ACTION_EXPLOREFOLDER, VIRTKEY, CONTROL
+    "E",           ACTION_EXPLOREFOLDER, VIRTKEY, CONTROL
+    VK_F10,        ACTION_MENU, VIRTKEY
 }
