--- a/source/GUI/WinAPI/Options/guiOptionsWINAPI_Downloads.rc
+++ b/source/GUI/WinAPI/Options/guiOptionsWINAPI_Downloads.rc
@@ -14,7 +14,7 @@
 // Dialog resources
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-TFrameDownloadOptions DIALOG 0, 0, 270, 103
+TFrameDownloadOptions DIALOG 0, 0, 270, 119
 STYLE DS_CONTROL | DS_SHELLFONT | WS_CHILDWINDOW | WS_MAXIMIZEBOX
 FONT 8, "Ms Shell Dlg"
 {
@@ -28,8 +28,10 @@ FONT 8, "Ms Shell Dlg"
     PUSHBUTTON      "...", IDC_BUTTON_DOWNLOADDIR, 250, 61, 11, 14
     CONTROL         "&Existing files:", IDC_LABEL_OVERWRITEMODE, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 78, 74, 10
     COMBOBOX        IDC_COMBO_OVERWRITEMODE, 82, 78, 179, 30, WS_TABSTOP | WS_TABSTOP | CBS_DROPDOWNLIST | CBS_HASSTRINGS
-    CONTROL         "&Converter:", IDC_LABEL_CONVERTER, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 94, 74, 10
-    COMBOBOX        IDC_COMBO_CONVERTER, 82, 94, 179, 30, WS_TABSTOP | WS_TABSTOP | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+    CONTROL         "&Retry count:", IDC_LABEL_RETRYCOUNT, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 94, 74, 10
+    EDITTEXT        IDC_EDIT_RETRYCOUNT, 82, 94, 32, 14, ES_AUTOHSCROLL | ES_RIGHT
+    CONTROL         "&Converter:", IDC_LABEL_CONVERTER, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 110, 74, 10
+    COMBOBOX        IDC_COMBO_CONVERTER, 82, 110, 179, 30, WS_TABSTOP | WS_TABSTOP | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 }
 
 
