--- a/source/YTD.dproj
+++ b/source/YTD.dproj
@@ -2,7 +2,7 @@
 		<PropertyGroup>
 			<ProjectGuid>{4CE0417E-A3A8-4D70-A505-A8F3EBB1045B}</ProjectGuid>
 			<MainSource>YTD.dpr</MainSource>
-			<Config Condition="'$(Config)'==''">Release</Config>
+			<Config Condition="'$(Config)'==''">Debug</Config>
 			<DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
 			<ProjectVersion>12.0</ProjectVersion>
 		</PropertyGroup>
@@ -49,6 +49,8 @@
 			<DCCReference Include="Common\uMessages.pas"/>
 			<DCCReference Include="Common\uOptions.pas"/>
 			<DCCReference Include="Common\uStringConsts.pas"/>
+			<DCCReference Include="Common\uScripts.pas"/>
+			<DCCReference Include="Common\uUpgrade.pas"/>
 			<DCCReference Include="Common\uDownloadClassifier.pas"/>
 			<DCCReference Include="Base\uDownloader.pas"/>
 			<DCCReference Include="Base\uCommonDownloader.pas"/>
@@ -58,20 +60,22 @@
 			<DCCReference Include="Base\uMSDownloader.pas"/>
 			<DCCReference Include="Base\uMSDirectDownloader.pas"/>
 			<DCCReference Include="Base\uNestedDownloader.pas"/>
+			<DCCReference Include="Base\uNestedDirectDownloader.pas"/>
 			<DCCReference Include="Base\uVarNestedDownloader.pas"/>
 			<DCCReference Include="Base\uRtmpDownloader.pas"/>
 			<DCCReference Include="Base\uRtmpDirectDownloader.pas"/>
 			<DCCReference Include="Base\uPlaylistDownloader.pas"/>
 			<DCCReference Include="Base\uHDSDownloader.pas"/>
 			<DCCReference Include="Base\uHDSDirectDownloader.pas"/>
-			<DCCReference Include="Downloaders\down123VideoNL.pas"/>
+			<DCCReference Include="Base\uHLSDownloader.pas"/>
+			<DCCReference Include="Base\uHLSDirectDownloader.pas"/>
+			<DCCReference Include="Base\uScriptedDownloader.pas"/>
 			<DCCReference Include="Downloaders\down1hdRo.pas"/>
 			<DCCReference Include="Downloaders\down3NewsCoNz.pas"/>
 			<DCCReference Include="Downloaders\down4TV.pas"/>
 			<DCCReference Include="Downloaders\down5min.pas"/>
 			<DCCReference Include="Downloaders\downAcademicEarth.pas"/>
 			<DCCReference Include="Downloaders\downAgresori.pas"/>
-			<DCCReference Include="Downloaders\downAktualne.pas"/>
 			<DCCReference Include="Downloaders\downAlternativaTV.pas"/>
 			<DCCReference Include="Downloaders\downAncensored.pas"/>
 			<DCCReference Include="Downloaders\downAngryAlien.pas"/>
@@ -99,7 +103,6 @@
 			<DCCReference Include="Downloaders\downCekniTo.pas"/>
 			<DCCReference Include="Downloaders\downCeskeDrahy.pas"/>
 			<DCCReference Include="Downloaders\downCesnet.pas"/>
-			<DCCReference Include="Downloaders\downCestyKSobe.pas"/>
 			<DCCReference Include="Downloaders\downCKKlic.pas"/>
 			<DCCReference Include="Downloaders\downClevver.pas"/>
 			<DCCReference Include="Downloaders\downClipfish.pas"/>
@@ -107,7 +110,6 @@
 			<DCCReference Include="Downloaders\downCNBC.pas"/>
 			<DCCReference Include="Downloaders\downCollegeHumor.pas"/>
 			<DCCReference Include="Downloaders\downCriticalPast.pas"/>
-			<DCCReference Include="Downloaders\downCSFD.pas"/>
 			<DCCReference Include="Downloaders\downCT.pas"/>
 			<DCCReference Include="Downloaders\downCurrent.pas"/>
 			<DCCReference Include="Downloaders\downDailyHaha.pas"/>
@@ -127,7 +129,7 @@
 			<DCCReference Include="Downloaders\downEuroGamer.pas"/>
 			<DCCReference Include="Downloaders\downEuroseptik.pas"/>
 			<DCCReference Include="Downloaders\downEVTV1.pas"/>
-			<DCCReference Include="Downloaders\downFacebook.pas"/>
+			<DCCReference Include="Downloaders\downEyeneer.pas"/>
 			<DCCReference Include="Downloaders\downFileCabi.pas"/>
 			<DCCReference Include="Downloaders\downFishki.pas"/>
 			<DCCReference Include="Downloaders\downFlickr.pas"/>
@@ -153,7 +155,6 @@
 			<DCCReference Include="Downloaders\downHokejCbCz.pas"/>
 			<DCCReference Include="Downloaders\downHokejCz.pas"/>
 			<DCCReference Include="Downloaders\downHrej.pas"/>
-			<DCCReference Include="Downloaders\downHudebniVideoKlipy.pas"/>
 			<DCCReference Include="Downloaders\downIConcerts.pas"/>
 			<DCCReference Include="Downloaders\downIDnes_Embed.pas"/>
 			<DCCReference Include="Downloaders\downIDnes.pas"/>
@@ -191,16 +192,15 @@
 			<DCCReference Include="Downloaders\downMetropolCZ_Zpravy.pas"/>
 			<DCCReference Include="Downloaders\downMetropolTV.pas"/>
 			<DCCReference Include="Downloaders\downMetroProjekt.pas"/>
-			<DCCReference Include="Downloaders\downMixerCZ.pas"/>
 			<DCCReference Include="Downloaders\downMojeTelevize.pas"/>
 			<DCCReference Include="Downloaders\downMojeVideo.pas"/>
 			<DCCReference Include="Downloaders\downMojeVideoSk.pas"/>
+			<DCCReference Include="Downloaders\downMovtex.pas"/>
 			<DCCReference Include="Downloaders\downMpora.pas"/>
 			<DCCReference Include="Downloaders\downMTV.pas"/>
 			<DCCReference Include="Downloaders\downMTVEmbed.pas"/>
 			<DCCReference Include="Downloaders\downMULitvinov.pas"/>
 			<DCCReference Include="Downloaders\downMultimediaVseCz.pas"/>
-			<DCCReference Include="Downloaders\downMusicStreamCz.pas"/>
 			<DCCReference Include="Downloaders\downMustWatch.pas"/>
 			<DCCReference Include="Downloaders\downMuvi.pas"/>
 			<DCCReference Include="Downloaders\downMuzu.pas"/>
@@ -211,7 +211,6 @@
 			<DCCReference Include="Downloaders\downNaHnoji.pas"/>
 			<DCCReference Include="Downloaders\downNaStojaka.pas"/>
 			<DCCReference Include="Downloaders\downNBC.pas"/>
-			<DCCReference Include="Downloaders\downNavratDoReality.pas"/>
 			<DCCReference Include="Downloaders\downNebickoVPapulke.pas"/>
 			<DCCReference Include="Downloaders\downNHL.pas"/>
 			<DCCReference Include="Downloaders\downNJoy.pas"/>
@@ -220,8 +219,10 @@
 			<DCCReference Include="Downloaders\downNovaMov.pas"/>
 			<DCCReference Include="Downloaders\downNovaMov_Embed.pas"/>
 			<DCCReference Include="Downloaders\downNovinky.pas"/>
+			<DCCReference Include="Downloaders\downNRSR.pas"/>
 			<DCCReference Include="Downloaders\downOckoTV.pas"/>
 			<DCCReference Include="Downloaders\downOKTeam.pas"/>
+			<DCCReference Include="Downloaders\downOldStream.pas"/>
 			<DCCReference Include="Downloaders\downOsobnostiCZ.pas"/>
 			<DCCReference Include="Downloaders\downOverStream.pas"/>
 			<DCCReference Include="Downloaders\downOwn3D_Embed.pas"/>
@@ -264,7 +265,6 @@
 			<DCCReference Include="Downloaders\downSnotr.pas"/>
 			<DCCReference Include="Downloaders\downSoundCloud.pas"/>
 			<DCCReference Include="Downloaders\downSpike.pas"/>
-			<DCCReference Include="Downloaders\downSportCZ.pas"/>
 			<DCCReference Include="Downloaders\downSportStream.pas"/>
 			<DCCReference Include="Downloaders\downStagevu.pas"/>
 			<DCCReference Include="Downloaders\downStastneVdovy.pas"/>
@@ -275,7 +275,6 @@
 			<DCCReference Include="Downloaders\downStudioPlus.pas"/>
 			<DCCReference Include="Downloaders\downStupidVideos.pas"/>
 			<DCCReference Include="Downloaders\downSTV.pas"/>
-			<DCCReference Include="Downloaders\downSuper.pas"/>
 			<DCCReference Include="Downloaders\downTangle.pas"/>
 			<DCCReference Include="Downloaders\downTeacherTube.pas"/>
 			<DCCReference Include="Downloaders\downTed.pas"/>
@@ -288,10 +287,10 @@
 			<DCCReference Include="Downloaders\downTV2Nord.pas"/>
 			<DCCReference Include="Downloaders\downTV4PlaySE.pas"/>
 			<DCCReference Include="Downloaders\downTV7.pas"/>
-			<DCCReference Include="Downloaders\downTVcom.pas"/>
 			<DCCReference Include="Downloaders\downTVHNOnlineSk.pas"/>
 			<DCCReference Include="Downloaders\downTVLux.pas"/>
 			<DCCReference Include="Downloaders\downTVNoe.pas"/>
+			<DCCReference Include="Downloaders\downTVNovinySk.pas"/>
 			<DCCReference Include="Downloaders\downTVSpl.pas"/>
 			<DCCReference Include="Downloaders\downTVVysocina.pas"/>
 			<DCCReference Include="Downloaders\downTyzdenSk.pas"/>
@@ -306,14 +305,13 @@
 			<DCCReference Include="Downloaders\downVideoClipsDump.pas"/>
 			<DCCReference Include="Downloaders\downVideoNurKz.pas"/>
 			<DCCReference Include="Downloaders\downVideoPortalSfTV.pas"/>
-			<DCCReference Include="Downloaders\downVideoTiscaliCZ.pas"/>
 			<DCCReference Include="Downloaders\downVideu.pas"/>
 			<DCCReference Include="Downloaders\downViiSk.pas"/>
 			<DCCReference Include="Downloaders\downViki.pas"/>
-			<DCCReference Include="Downloaders\downVimeo.pas"/>
-			<DCCReference Include="Downloaders\downVimeo_Embed.pas"/>
+			<DCCReference Include="Downloaders\downVineCo.pas"/>
 			<DCCReference Include="Downloaders\downVitalMtb.pas"/>
 			<DCCReference Include="Downloaders\downVKontakteRuEmbed.pas"/>
+			<DCCReference Include="Downloaders\downVoyo.pas"/>
 			<DCCReference Include="Downloaders\downWeGame.pas"/>
 			<DCCReference Include="Downloaders\downWimp.pas"/>
 			<DCCReference Include="Downloaders\downWordPressTV.pas"/>
@@ -346,7 +344,7 @@
 			<DCCReference Include="Downloaders\XXX\xxxGavinXXX.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxGrinvi.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxHardSexTube.pas"/>
-			<DCCReference Include="Downloaders\XXX\xxxJenProMuze.pas"/>
+			<DCCReference Include="Downloaders\XXX\xxxHeavyR.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxKeezMovies.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxKeezMovies_Embed.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxMachoVideo.pas"/>
@@ -358,8 +356,8 @@
 			<DCCReference Include="Downloaders\XXX\xxxPornHub.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxPornoTube.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxPornoZdarma.pas"/>
+			<DCCReference Include="Downloaders\XXX\xxxPornTube.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxRawTube.pas"/>
-			<DCCReference Include="Downloaders\XXX\xxxRedTube.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxRozzlobeniMuzi.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxRude.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxSexDoma.pas"/>
@@ -423,7 +421,7 @@
 						<Parameters Name="UseLauncher">False</Parameters>
 						<Parameters Name="LoadAllSymbols">True</Parameters>
 						<Parameters Name="LoadUnspecifiedSymbols">False</Parameters>
-						<Parameters Name="RunParams">http://www.youtube.com/v/oULO3i5Xra0</Parameters>
+						<Parameters Name="RunParams">--gui</Parameters>
 					</Parameters>
 					<VersionInfo>
 						<VersionInfo Name="IncludeVerInfo">True</VersionInfo>
@@ -431,7 +429,7 @@
 						<VersionInfo Name="MajorVer">1</VersionInfo>
 						<VersionInfo Name="MinorVer">25</VersionInfo>
 						<VersionInfo Name="Release">0</VersionInfo>
-						<VersionInfo Name="Build">989</VersionInfo>
+						<VersionInfo Name="Build">993</VersionInfo>
 						<VersionInfo Name="Debug">False</VersionInfo>
 						<VersionInfo Name="PreRelease">False</VersionInfo>
 						<VersionInfo Name="Special">False</VersionInfo>
@@ -443,7 +441,7 @@
 					<VersionInfoKeys>
 						<VersionInfoKeys Name="CompanyName">Pepak</VersionInfoKeys>
 						<VersionInfoKeys Name="FileDescription">YTD</VersionInfoKeys>
-						<VersionInfoKeys Name="FileVersion">1.25.0.989</VersionInfoKeys>
+						<VersionInfoKeys Name="FileVersion">1.25.0.993</VersionInfoKeys>
 						<VersionInfoKeys Name="InternalName">YTD</VersionInfoKeys>
 						<VersionInfoKeys Name="LegalCopyright">(c) 2009-11 Pepak</VersionInfoKeys>
 						<VersionInfoKeys Name="LegalTrademarks"/>
